starter-code/css/main.css
body {
  font-family: "Kumbh Sans", sans-serif;
  /*
  background-image: url("/starter-code/assets/home/bg-pattern-header.svg"),
    url("/starter-code/assets/home/bg-pattern-footer.svg");
  background-position: top, bottom;
  background-size: 100% 458px, 100% 40vh;
  background-repeat: no-repeat, no-repeat;
  */
}

.container {
  background-image: url("/starter-code/assets/shared/logo.svg");
  background-position: top center;
  background-size: 155px 30px;
  background-position-y: 3vh;
  background-repeat: no-repeat;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

h1 {
  color: #333950;
  font-style: normal;
  font-weight: bold;
  font-size: 2.5rem;
  line-height: 3rem;
}

.mainText {
  color: #747b95;
  font-style: normal;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.625rem;
}

/*Buttons*/
button {
  border: none;
  border-radius: 28px;
  height: 56px;
  width: 171px;
}

button a {
  font-weight: bold;
  font-size: 1rem;
  line-height: 1.75rem;
  text-decoration: none;
}

.getStarted {
  background: #5175ff;
  box-shadow: 0px 25px 25px -10px rgba(63, 91, 194, 0.247159);
}

.getStarted a {
  color: #ffffff;
}

.tryForFree a {
  line-height: 1.75rem;
  font-size: 1rem;
  font-weight: bold;
}

.blueBtn {
  background-color: rgba(81, 117, 255, 0.15);
}

.blueBtn a {
  color: #5175ff;
}

.whiteBtn {
  background: #ffffff;
}

.whiteBtn a {
  color: #5175ff;
}

/*card styles*/

.card {
  border-radius: 13px;
  width: 327px;
  height: 508px;
  margin: auto;
}

.cardWhite {
  box-shadow: 0px 50px 50px -25px rgba(75, 92, 154, 0.247159);
}

.cardBlue {
  background: #5175ff;
  box-shadow: 0px 50px 50px -25px rgba(75, 92, 154, 0.247159);
}

.membershipLevel {
  color: #333950;
  font-weight: bold;
  font-size: 1.25rem;
  line-height: 1.75rem;
  padding-top: 25px;
}

.membershipCost {
  color: #333950;
  font-weight: bold;
  font-size: 3.5rem;
  line-height: 4rem;
  padding-top: 30px;
}

.membershipUser {
  color: #333950;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.75rem;
  padding-top: 30px;
}

.card ul {
  padding-top: 20px;
}

.membershipFeature {
  color: #747b95;
  font-weight: normal;
  font-size: 1rem;
  line-height: 1.75rem;
  padding-top: 15px;
}

.membershipFeatureWhite {
  color: #ffffff;
  opacity: 0.75;
}

.whiteText {
  color: #ffffff;
}

.tryForFree {
  margin-top: 55px;
}

